; ModuleID = '/home/carl/AnghaBench/Cello/src/extr_Table.c_Table_Key_Hash.c'
source_filename = "/home/carl/AnghaBench/Cello/src/extr_Table.c_Table_Key_Hash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.Table = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.Table*, i32)* @Table_Key_Hash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Table_Key_Hash(%struct.Table* %0, i32 %1) #0 {
  %3 = alloca %struct.Table*, align 8
  %4 = alloca i32, align 4
  store %struct.Table* %0, %struct.Table** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load %struct.Table*, %struct.Table** %3, align 8
  %6 = getelementptr inbounds %struct.Table, %struct.Table* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = load i32, i32* %4, align 4
  %10 = load %struct.Table*, %struct.Table** %3, align 8
  %11 = call i32 @Table_Step(%struct.Table* %10)
  %12 = mul nsw i32 %9, %11
  %13 = sext i32 %12 to i64
  %14 = getelementptr inbounds i8, i8* %8, i64 %13
  %15 = bitcast i8* %14 to i32*
  %16 = load i32, i32* %15, align 4
  ret i32 %16
}

declare dso_local i32 @Table_Step(%struct.Table*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
